logging setup for application

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-json-logger@https://github.com/nhairs/python-json-logger/releases/download/v3.0.0/python_json_logger-3.0.0-py3-none-any.whl
 adaptix
 dishka
 asynch
@@ -6,3 +7,4 @@ fastapi
 faststream
 aio-pika
 aiohttp
+# e.g. 3.0.0 wheel
