--- a/vector.yaml
+++ b/vector.yaml
@@ -11,7 +11,7 @@ transforms:
     inputs:
       - rpgram_setup_source
     drop_on_error: true
-    source: ".ts = now();.message = object!(parse_json(.message) ?? {})"
+    source: ".message = object!(parse_json(.message) ?? {})"
 
 
 sinks:
