--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
 [project]
-name = 'rpgram_world'
+name = 'rpgram_setup'
 version = '0.0.0a'
+
+[project.scripts]
+mermaid = "doc.code_graph:make_graph"
+[tool.setuptools.packages.find]
+where = ["src", "tools"]
+
+[tool.pytest]
+asyncio_default_fixture_loop_scope = "function"
