--- a/.env.compose
+++ b/.env.compose
@@ -1,3 +1,5 @@
-BATTLE_URL=http://host.docker.internal:8000
+BATTLE_URL=http://rpgram_battle:8000
+#BATTLE_URL=http://host.docker.internal:8000
 CH_DSN=clickhouse://host.docker.internal:9000/rpgram
 AMQP_DSN=amqp://guest:guest@host.docker.internal:5672/
+LOG_LEVEL=20
