--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,12 @@
 repos:
--   repo: https://github.com/psf/black
-    rev: 24.10.0
-    hooks:
-    - id: black
-
--   repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-    - id: flake8
-
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        name: isort (python)
-
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.13.0'
-    hooks:
-    -   id: mypy
-        args: ["--install-types", "--non-interactive", "--explicit-package-bases"]
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.8.3
+  hooks:
+    - id: ruff
+      args: [ --fix ]
+    - id: ruff-format
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: 'v1.13.0'
+  hooks:
+    - id: mypy
+      args: ["--install-types", "--non-interactive", "--explicit-package-bases"]
